ask to input (incomplete)

--- a/tests/playground.html
+++ b/tests/playground.html
@@ -245,6 +245,8 @@ function addBlock() {
     unlockWhile();
   } else if (value === 'print') {
     unlockPythonPrint();
+  } else if (value === 'input') {
+    unlockPythonInput();
   } else {
     console.log(value)
   }
@@ -335,6 +337,7 @@ function addBlock() {
       <option value="while">while upgrade</option>
       <option value="compare">comparison operator upgrade</option>
       <option value="print">print upgrade</option>
+      <option value="input">input upgrade</option>
       <option value="dummy">dummy</option>
     </select>
     <input type="button" value="Add New Block" onclick="addBlock()">
